<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/studentFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/student" />

    <item
        android:id="@+id/parentFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/parent" />

    <item
        android:id="@+id/schoolFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/schools" />

    <item
        android:id="@+id/teacherFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/teachers" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


</menu>